# ChineseToyLang

./: CMakeLists.txt  build.sh  main.c  main.cpp  version.h.in
app/: CMakeLists.txt  Main.cpp
docs/: doc.md  docs.md
include/: CMakeLists.txt
include/Backend/: CMakeLists.txt
include/Backend/ARM/: CMakeLists.txt
include/Backend/X86/: CMakeLists.txt
include/Basic/: CMakeLists.txt  LinkedList.h  Types.h  Utils.h
include/Frontend/: Ast.h  CMakeLists.txt  Infer.h  Lexer.h  Parser.h
include/IR/: CMakeLists.txt  CodeGen.h  DeclEmitter.h  Emitter.h  ExprEmitter.h  IREmitter.h  ProgramEmitter.h  StmtEmitter.h
lib/: CMakeLists.txt
lib/infer/: infer.c  infer.h
lib/type/: type.c  type.h
src/: CMakeLists.txt  main.c  version.h.in
src/Backend/: CMakeLists.txt  CodeGen  CodeGen.cpp
src/Backend/ARM/: CMakeLists.txt
src/Backend/X86/: CMakeLists.txt
src/Basic/: CMakeLists.txt  Types.c  Utils.c
src/Frontend/: Ast.c  CMakeLists.txt  Infer.c  Lexer.c  Parser.c
src/IR/: CMakeLists.txt  CodeGen.cpp  CommonEmitter.cpp  DeclEmitter.cpp  Emitter.cpp  ExprEmitter.cpp  IREmitter.cpp  ProgramEmitter.cpp  StmtEmitter.cpp
src/backend/codegen/: codegen.c  codegen.h
src/datastructure/: CMakeLists.txt  LinkedList.h
src/fronted/: CMakeLists.txt
src/fronted/ast/: CMakeLists.txt  ast.c  ast.h
src/fronted/infer/: CMakeLists.txt  infer.c  infer.h
src/fronted/lexer/: CMakeLists.txt  lexer.h
src/fronted/parser/: CMakeLists.txt  parser.c  parser.h
src/fronted/sema/: CMakeLists.txt
src/fronted/type/: CMakeLists.txt  type.c  type.h
src/frontend/ast/: ast.c  ast.h
src/frontend/infer/: infer.c  infer.h
src/frontend/lexer/: lexer.c  lexer.h
src/frontend/parser/: parser.c  parser.h
src/frontend/type/: type.c  type.h
src/middle/: CMakeLists.txt
src/middle/ir/: CMakeLists.txt  ir.cpp  ir.h
src/middle/opt/: CMakeLists.txt
src/type/: type.c  type.h
src/utils/: CMakeLists.txt  util  utils.c  utils.h
tests/: CMakeLists.txt
tests/Unit/: CMakeLists.txt
tests/Unit/Basic/: TypeTest.cpp  UtilsTest.cpp
tests/Unit/Frontend/: LexerTest.cpp
tests/Unit/IR/: CodeGenTest.cpp
tests/examples/: test.txt  test_variable.txt
tests/unit/: CMakeLists.txt  test_ir.cpp  test_lexer.c  test_parser.c
tools/: CMakeLists.txt
